chore: add codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,8 @@ script:
   - ./bin/tldr --update
   - make test
 
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+
 notifications:
   email: false
