--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.12
+          go-version: 1.20
 
       - name: Setup cache
         uses: actions/cache@v3
@@ -47,6 +47,7 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           name: codecov-atomic
+          files: ./coverage.txt
           flags: unit
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: false
