--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ name: CI
 on:
   pull_request:
   push:
-    # branches:
-    #   - master
+    paths-ignore:
+      - '**.md'
 
 env:
   GO111MODULE: on
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.20'
+          go-version: '1.21'
 
       - name: Setup cache
         uses: actions/cache@v3
