--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
   push:
     paths-ignore:
-      - '**.md'
+      - "**.md"
 
 env:
   GO111MODULE: on
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: "1.21"
 
       - name: Setup cache
         uses: actions/cache@v3
@@ -40,19 +40,7 @@ jobs:
         run: ./bin/tldr --update
 
       - name: Run tests with coverage report
-        run: |
-            # Uncomment next line after fox tests
-            # make test
-
-            # and remove lines bellow after fixing tests
-            echo "" > coverage.txt
-            for d in $(go list ./... | grep -v vendor); do
-                go test -race -coverprofile=profile.out -covermode=atomic -skip "TestRender|TestWrite|TestMarkdown" $d
-                if [ -f profile.out ]; then
-                    cat profile.out >> coverage.txt
-                    rm profile.out
-                fi
-            done
+        run: make test
 
       - name: Upload coverage to Codecov
         if: success()
